...
      backgroundColor: bluePage,
      body: Center(
        child: ListView(
          children: <Widget>[
            Column(
              children: <Widget>[
                PageTitle(title: 'Friends'),
                getFriends(),
              ],
            )
          ],
        ),
      ),
...
      ),
    );
  }

  Widget createFriendRow(String contact, destinationPage) {
    return Container(
        key: Key('friend'),
        margin: EdgeInsets.only(top: 10, bottom: 10),
        padding: EdgeInsets.all(12.0),
        width: 400,
        height: 100,
        decoration: BoxDecoration(
            color: purpleButton, borderRadius: BorderRadius.circular(18.0)),
...
