...
            )
          ],
        ),
      ),
      bottomNavigationBar: Footer(color: bluePage),
      floatingActionButton: FloatingActionButton(
        key: Key('delete'),
        onPressed: () {
          _db.removeFriend(user.id);
          Navigator.of(context).pop(true);
        },
        backgroundColor: teal,
        child: Icon(Icons.delete),
...
