...
                if (_checkboxValue == true) {
                  _savePreferences();
                }
              },
              color: purpleButton,
              child: Text(
                'Skip',
                style: TextStyle(fontSize: 20, color: Colors.white),
              ),
              padding: EdgeInsets.all(12),
              shape: new RoundedRectangleBorder(
                borderRadius: new BorderRadius.circular(25.0),
              ),
...
